[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["GreenScreen410 <pauljjang410@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
boto3 = "^1.35.71"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
